--- a/style.css
+++ b/style.css
@@ -165,8 +165,10 @@ body {
 
 .BlackLabel-img {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 360px;
+    width:100%;
+    height:37%;
+    z-index: 2;
 }
 
 .BlackLabel-1 h3{
@@ -370,7 +372,7 @@ p{
     }
 
     .BlackLabel-img{
-        display: none;
+        display: flex;
     }
 
     .services{
@@ -422,7 +424,6 @@ p{
     }
     .footer-content{
         text-align: center;
-        display: flex;
 }
 }
 
@@ -434,3 +435,13 @@ p{
   'GRAD' 200,
   'opsz' 48
 }
+.ln{
+
+    height: 5px;
+    width: 10%;
+    background-color: rgb(0,0,0);
+    position: relative;
+    top: 45px;
+    border-radius: 10px;
+}
+
