--- a/BlackLabel/style.css
+++ b/BlackLabel/style.css
@@ -95,9 +95,7 @@ margin: 100%;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     background-color: rgb(0, 55, 72);
-    opacity: 49%;
-    border-color: #ffffff;
-    
+    opacity: 100;
 }
 
 
@@ -450,4 +448,44 @@ p{
     top: 45px;
     border-radius: 10px;
 }
+.conte{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+.conte .card{
+    width: 330px;
+    height: 430px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2) ;
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+}
+.conte .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+.conte .card img{
+    width: 230px;
+    height: 220px;
+}
+.conte .card h1{
+    font-weight: 600;
+}
+.conte .card p{
+  padding: 0 1rem;
+  font-size: 16px;  
+  font-weight: 300;
+}
+.conte .card a{
+    font-weight: 500;
+    text-decoration: none;
+    /*color: none;*/
 
+}
