--- a/BlackLabel/style_slider.css
+++ b/BlackLabel/style_slider.css
@@ -1,7 +1,7 @@
 section{
     display: flex;
     min-height: 100vh;
-    background: #EFC076;
+    /*background: #EFC076;*/
 }
 .container-slider{
     width: 90%;
